tests/fixtures/valid/modules/main.lby
import geometry

fn main -> i64
    let p Point = Point(3, 4)
    dot(p, p)
